@@ -14,7 +14,7 @@ apply plugin: "java"
 project.description = "OpenSale ERP - Fintech Software."
 project.ext.buildDate = LocalDate.now()
 project.version = "$spoty"
-def app_copyright="Copyright " + LocalDate.now().getYear() + " nomard inc."
+def app_copyright = "Copyright " + LocalDate.now().getYear() + " nomard inc."
 
 repositories {
     mavenLocal()
@@ -28,30 +28,13 @@ repositories {
 
 //graalvmNative {
 //    toolchainDetection = true
-//
 //    agent {
-//        defaultMode = "standard" // Default agent mode if one isn"t specified using `-Pagent=mode_name`
-//        enabled = true // Enables the agent
-//
+//        defaultMode = "standard"
+//        enabled = true
 //        modes {
-//            // The standard agent mode generates metadata without conditions.
 //            standard {
 //            }
-//            // The conditional agent mode generates metadata with conditions.
-//            // conditional {
-//            //     userCodeFilterPath = "path-to-filter.json"
-//            //     // Path to a filter file that determines classes which will be used in the metadata conditions.
-//            //     extraFilterPath = "path-to-another-filter.json"
-//            //     // Optional, extra filter used to further filter the collected metadata.
-//            // }
-//            // The direct agent mode allows users to directly pass options to the agent.
-//            // direct {
-//            //     // {output_dir} is a special string expanded by the plugin to where the agent files would usually be output.
-//            //     options.add("config-output-dir={output_dir}")
-//            //     options.add("experimental-configuration-with-origins")
-//            // }
 //        }
-//
 //        callerFilterFiles.from("filter.json")
 //        accessFilterFiles.from("filter.json")
 //        builtinCallerFilter = true
@@ -59,56 +42,25 @@ repositories {
 //        enableExperimentalPredefinedClasses = false
 //        enableExperimentalUnsafeAllocationTracing = false
 //        trackReflectionMetadata = true
-//
-//        // Copies metadata collected from tasks into the specified directories.
 //        metadataCopy {
-//            inputTaskNames.add("test") // Tasks previously executed with the agent attached.
+//            inputTaskNames.add("test")
 //            outputDirectories.add("src/main/resources/META-INF/native-image/<groupId>/<artifactId>/")
-//            // Replace <groupId> and <artifactId> with GAV coordinates of your project
-//            mergeWithExisting = true // Instead of copying, merge with existing metadata in the output directories.
+//            mergeWithExisting = true
 //        }
-//
-//        /*
-//        By default, if `-Pagent` is specified, all tasks that extend JavaForkOptions are instrumented.
-//        This can be limited to only specific tasks that match this predicate.
-//         */
-//        // tasksToInstrumentPredicate = t -> true
 //    }
-//
 //    binaries {
 //        main {
-//            // Main options
-//            imageName = "OpenSale-ERP" // The name of the native image, defaults to the project name
-//            mainClass = "inc.nomard.spoty.core.Main" // The main class to use, defaults to the application.mainClass
+//            imageName = "OpenSale-ERP"
+//            mainClass = "inc.nomard.spoty.core.Main"
 //            debug = true
-//            // Determines if debug info should be generated, defaults to false (alternatively add --debug-native to the CLI)
-//            verbose = true // Add verbose output, defaults to false
-//            fallback = false // Sets the fallback mode of native-image, defaults to false
+//            verbose = true
+//            fallback = false
 //            sharedLibrary = false
-//            // Determines if image is a shared library, defaults to false if `java-library` plugin isn"t included
 //            quickBuild = false
-//            // Determines if image is being built in quick build mode (alternatively use GRAALVM_QUICK_BUILD environment variable, or add --native-quick-build to the CLI)
-//            richOutput = false // Determines if native-image building should be done with rich output
-//            // requiredVersion = "22.3" // The minimal GraalVM version, can be `MAJOR`, `MAJOR.MINOR` or `MAJOR.MINOR.PATCH`
-//
-//            // systemProperties = [name1: "value1", name2: "value2"] // Sets the system properties to use for the native image builder
-//            // configurationFileDirectories.from(file("src/my-config")) // Adds a native image configuration file directory, containing files like reflection configuration
-//            // excludeConfig.put("org.example.test:artifact:version", ["^/META-INF/native-image/.*", "^/config/.*"]) // Excludes configuration that matches one of given regexes from JAR of dependency with said coordinates.
-//            // excludeConfig.put(file("path/to/artifact.jar"), listOf("^/META-INF/native-image/.*", "^/config/.*"))
-//
-//            // Advanced options
-//            // buildArgs.add("--link-at-build-time")
-//            // Passes "--link-at-build-time" to the native image builder options. This can be used to pass parameters which are not directly supported by this extension
+//            richOutput = false
 //            buildArgs.add("-O4")
-//            // jvmArgs.add("flag") // Passes "flag" directly to the JVM running the native image builder
-//
-//            // Runtime options
-//            runtimeArgs.add("--help") // Passes "--help" to built image, during "nativeRun" task
-//
-//            // useFatJar = true // Instead of passing each jar individually, builds a fat jar
 //        }
 //    }
-//
 //    binaries.configureEach {
 //        buildArgs.add("--verbose")
 //        resources.autodetect()
@@ -133,15 +85,21 @@ run {
             "-XX:NewRatio=1",
             "-Xms256m",
             "-Xmx1G",
-            "-XX:ReservedCodeCacheSize=512m",
+            "-XX:ReservedCodeCacheSize=128m",
             "-XX:+UseG1GC",
+            "-XX:MaxGCPauseMillis=200",
             "-XX:SoftRefLRUPolicyMSPerMB=50",
-            "-XX:CICompilerCount=2",
             "-XX:+HeapDumpOnOutOfMemoryError",
-            "-Dsun.io.useCanonCaches=false",
             "-Djbr.catch.SIGABRT=true",
             "-Djdk.attach.allowAttachSelf=true",
+            "-XX:ErrorFile=/home/infinite-dev/IdeaProjects/spoty/error%p.log",
             "--add-exports=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED",
+            "-Xshare:on",
+            "-XX:+TieredCompilation",
+            "-XX:+UseStringDeduplication",
+            "-Xlog:gc*,gc+cpu,gc+heap=debug:file=/tmp/gc.log:time,uptime,level,tags",
+            "-Djava.security.egd=file:/dev/urandom",
+            "-XX:+AlwaysPreTouch"
     ]
 }
 
@@ -172,16 +130,21 @@ jlink {
                 "-XX:NewRatio=1",
                 "-Xms256m",
                 "-Xmx1G",
-                "-XX:ReservedCodeCacheSize=512m",
+                "-XX:ReservedCodeCacheSize=128m",
                 "-XX:+UseG1GC",
+                "-XX:MaxGCPauseMillis=200",
                 "-XX:SoftRefLRUPolicyMSPerMB=50",
-                "-XX:CICompilerCount=2",
                 "-XX:+HeapDumpOnOutOfMemoryError",
-                "-Dsun.io.useCanonCaches=false",
                 "-Djbr.catch.SIGABRT=true",
                 "-Djdk.attach.allowAttachSelf=true",
                 "-XX:ErrorFile=/home/infinite-dev/IdeaProjects/spoty/error%p.log",
                 "--add-exports=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED",
+                "-Xshare:on",
+                "-XX:+TieredCompilation",
+                "-XX:+UseStringDeduplication",
+                "-Xlog:gc*,gc+cpu,gc+heap=debug:file=/tmp/gc.log:time,uptime,level,tags",
+                "-Djava.security.egd=file:/dev/urandom",
+                "-XX:+AlwaysPreTouch"
         ]
     }
 
@@ -194,6 +157,7 @@ jlink {
                 "--vendor", app_vendor,
                 "--about-url", app_about_url,
                 "--license-file", app_eula,
+                "--resource-dir", resource_dir,
         ]
 
         if (os.linux) {
